# HealthChain

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.MD  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  PYTHON_3.14_COMPATIBILITY.md  README.md  demo.py  example_free_text.json  example_use.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  retry_check.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvement.md  feature_request.md
.github/workflows/: build_documentation.yml  ci.yml  deploy_documentation.yml  publish.yml  test-publish.yml
api/: index.html
api/adapters/: index.html
api/cda_parser/: index.html
api/cds_hooks/: index.html
api/clients/: index.html
api/component/: index.html
api/connectors/: index.html
api/containers/: index.html
api/data_generators/: index.html
api/data_models/: index.html
api/fhir_helpers/: index.html
api/interop/: index.html
api/pipeline/: index.html
api/sandbox/: index.html
api/service/: index.html
api/use_cases/: index.html
blog/: index.html
cli/: index.html
community/: index.html
community/contribution_guide/: index.html
community/resources/: index.html
config/mappings/: shared_mappings.yaml
configs/: defaults.yaml
configs/environments/: testing.yaml
configs/mappings/: README.md  shared_mappings.yaml
contributor-resources/grant-support-letter-template/: index.html
cookbook/: 000-template.py  cds_discharge_summarizer_hf_chat.py  cds_discharge_summarizer_hf_trf.py  data_aggregation.py  fhir_context_llm_qa.py  index.html  keycloak_oauth2_integration.py  multi_ehr_data_aggregation.py  notereader_clinical_coding_fhir.py  sepsis_cds_hooks.py  sepsis_fhir_batch.py  sepsis_prediction_inference.py  summarization_pipeline_hf.py
cookbook/000-template/: index.html
cookbook/cds_sandbox/: index.html
cookbook/clinical_coding/: index.html
cookbook/data/: discharge_notes.csv  medplum_seed.py  notereader_cda.xml  qa_patient.json
cookbook/discharge_summarizer/: index.html
cookbook/fhir_qa/: index.html
cookbook/format_conversion/: index.html
cookbook/ml_model_deployment/: index.html
cookbook/models/: sepsis_model.pkl
cookbook/multi_ehr_aggregation/: index.html
cookbook/notereader_sandbox/: index.html
cookbook/setup_fhir_sandboxes/: index.html
cookbook/templates/: cds_card_template.json
dev-templates/: README.md
dev-templates/allergies/: README.md
diabetes_risk_app/: .dockerignore  .gitignore  DIABETES_RISK_APP_GUIDE.md  Dockerfile  README.md  app.py  docker-compose.yml  quick_start_diabetes_app.sh  requirements.txt
diabetes_risk_app/config/: feature_schema.yaml  fhir_servers.yaml
diabetes_risk_app/tests/: test_app.py  test_integration.py  test_sandbox.py
distribution/: index.html
docs/: ML_MODEL_COMPREHENSIVE_GUIDE.md  cli.md  distribution.md  index.md  installation.md  license-page.md  license.md  mlflow-integration.md  quickstart.md  usage.md  usecases.md
docs/api/: adapters.md  cda_parser.md  cds_hooks.md  clients.md  component.md  connectors.md  containers.md  data_generators.md  data_models.md  fhir_helpers.md  interop.md  pipeline.md  sandbox.md  service.md  use_cases.md
docs/community/: index.md
docs/cookbook/: 000-template.md  cds_sandbox.md  clinical_coding.md  data_aggregation.md  discharge_summarizer.md  fhir_qa.md  format_conversion.md  index.md  ml_model_deployment.md  mlflow_experiment_tracking.md  multi_ehr_aggregation.md  notereader_sandbox.md  oauth2_authentication.md  setup_fhir_sandboxes.md
docs/javascripts/: cookbook-filter.js
docs/overrides/: welcome.html
docs/reference/: concepts.md  config.md  index.md
docs/rfcs/: 000-template.md  001-data-provenance-design.md  (+2 more)
fhir-dev-utils/: README.md  SUMMARY.md  app.py
healthcare_data_converter/: .dockerignore  CLI_REGISTRATION_EXPLAINED.md  Dockerfile  GUIDELINES.md  INSTALL_GUIDE.md  TECHNICAL_BUSINESS_SUMMARY.md  __init__.py  cli.py  converter.py  docker-compose.yml  models.py  patient.xml  pyproject.toml  quick_start.sh  requirements.txt  service.py
healthcare_data_converter/configs/: __init__.py  settings.yaml
healthcare_data_converter/examples/: __init__.py  api_usage.py  basic_conversion.py
healthchain/: __init__.py  base.py  cli.py  clients.py  config_manager.py  decorators.py  execution.py  middleware.py  pydantic_models.py  use_cases.py  workflows.py
installation/: index.html
javascripts/: cookbook-filter.js
license-page/: index.html
ml-app/: .env.example  README.md  RUN_APP.md  SUMMARY.md  __init__.py  app.py  auth.py  config.py  train_demo_model.py
multi_ehr_aggregation/: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_GUIDELINES.md  README.md  TECHNICAL_SUMMARY.md  app.py  docker-compose.yml  requirements.txt
my-app/: .dockerignore  .env.example  app.py  healthchain.yaml  requirements.txt
notebooks/: fhir_ml_workflow.ipynb
output/: README.md
overrides/: main.html  welcome.html
quickstart/: index.html
reference/: index.html
resources/: epic_cda.xml  uclh_cda.xml
scripts/: check_epic_connection.py  extract_mimic_demo_patients.py  generate_demo_model.py  generate_private_key.py  healthchainapi_e2e_demo.py  sepsis_prediction_inference.py  sepsis_prediction_training.py  serve_jwks.py
search/: search_index.json
security/: index.html
src/: base.py  decorators.py  methods.py
streamlit-demo/: app.py
stylesheets/: extra.css  welcome.css
tests/: conftest.py  test_cdaannotator.py  test_cds.py  test_ci_contract_gate.py  test_cli.py  test_clients.py  test_clindoc.py  test_config_base.py  test_data_generator.py  test_decorators.py  test_interop_config_manager.py  test_models.py  test_order_validation.py  test_pipeline.py  test_pipeline_integrations.py  test_pydantic_complex_field_models.py  test_pydantic_patient_generators.py  test_quantity_class.py  test_sandbox.py  test_service.py  test_service_with_func.py  test_soap_server.py  test_strategy.py  test_urlbuilder.py  test_usecases.py  test_validators.py
tutorials/: index.html
usecases/: index.html
(+720 files in other folders)
