[tool.poetry]
name = "healthchain"
version = "0.0.0"
description = "Remarkably simple testing and validation of AI/NLP applications in healthcare context."
authors = ["Jennifer Jiang-Kells <jenniferjiangkells@gmail.com>", "Adam Kells <adamjkells93@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://dotimplement.github.io/HealthChain/"
keywords = ["nlp", "ai", "llm", "healthcare", "ehr", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
include = ["healthchain/templates/*"]

[project.urls]
"Homepage" = "https://dotimplement.github.io/HealthChain/"
"Repository" = "https://github.com/dotimplement/HealthChain"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pydantic = "^2.7.1"
pandas = ">=1.0.0,<3.0.0"
spacy = ">=3.0.0,<4.0.0"
numpy = "<2.0.0"
colorama = "^0.4.6"
faker = "^25.1.0"
termcolor = "^2.4.0"
jinja2 = "^3.1.3"
fastapi = "^0.115.3"
starlette = ">=0.40.0,<0.42.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"
httpx = "^0.27.0"
spyne = "^2.14.0"
lxml = "^5.2.2"
xmltodict = "^0.13.0"

fhir-resources = "^8.0.0"
[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pytest = "^8.2.0"
pre-commit = "^3.5.0"
pytest-anyio = "^0.0.0"
trio = "^0.25.0"
ipykernel = "^6.29.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.26.0"
mkdocstrings-python = "^1.11.1"

[tool.poetry.scripts]
healthchain = "healthchain.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
