[tool.poetry]
name = "healthchain"
version = "0.0.0"
description = "Python toolkit that makes it easier to connect your AI/ML pipelines to healthcare systems"
authors = ["Jennifer Jiang-Kells <jenniferjiangkells@gmail.com>", "Adam Kells <adamjkells93@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://dotimplement.github.io/HealthChain/"
keywords = ["nlp", "ai", "llm", "healthcare", "ehr", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
include = [
    "healthchain/templates/*",
    "healthchain/configs/**/*.yaml",
    "healthchain/configs/**/*.liquid"
]

[project.urls]
"Homepage" = "https://dotimplement.github.io/HealthChain/"
"Repository" = "https://github.com/dotimplement/HealthChain"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = ">=2.0.0,<2.11.0"
eval_type_backport = "^0.1.0"
pandas = ">=1.0.0,<3.0.0"
spacy = ">=3.0.0,<4.0.0"
numpy = "<2.0.0"
colorama = "^0.4.6"
faker = "^25.1.0"
termcolor = "^2.4.0"
jinja2 = "^3.1.3"
fastapi = "^0.115.3"
starlette = ">=0.40.0,<0.42.0"
uvicorn = "^0.24.0"
httpx = "^0.27.0"
spyne = "^2.14.0"
lxml = "^5.2.2"
xmltodict = "^0.13.0"
fhir-resources = "^8.0.0"
python-liquid = "^1.13.0"
regex = "!=2019.12.17"
fastapi-events = "^0.12.2"
jwt = "^1.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pytest = "^8.2.0"
pre-commit = "^3.5.0"
pytest-asyncio = "^0.24.0"
ipykernel = "^6.29.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = "^0.26.0"
mkdocstrings-python = "^1.11.1"

[tool.poetry.scripts]
healthchain = "healthchain.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
